--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -4,6 +4,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+.hamburger {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  aspect-ratio: 1/1;
+  width: 38px;
+}
 .navbar .wrapper-container {
   display: flex;
   justify-content: space-between;
@@ -19,10 +26,13 @@ body {
   line-height: 1.6;
   background-color: #e9ecef;
   color: #333;
+  overflow-x: hidden;
 }
 
 /* Navbar */
 .navbar {
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -59,12 +69,10 @@ body {
   transition: color 0.3s ease;
   border: 1px solid transparent;
   border-radius: 5px;
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
 }
 .navbar nav ul li a:hover {
   transition: font-size 0.2s ease;
-  color: #6c757d;
-  font-size: 1.8em;
+  color: #8da3b7;
 }
 /* Hero Section */
 .hero {
@@ -77,7 +85,8 @@ body {
 }
 
 .hero > div:first-child {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   max-width: 1400px;
 }
 
@@ -232,5 +241,73 @@ footer a:hover {
   }
   .steps {
     flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .hero-text h1 {
+    font-size: 60px;
+  }
+  .hero > div:first-child {
+    grid-template-columns: 1fr;
+    justify-items: center;
+    gap: 20px;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 920px) {
+  .logo span {
+    display: none;
+  }
+}
+@media screen and (max-width: 768px) {
+  .navbar .logo img {
+    border-radius: 10px;
+    height: 50px;
+    width: 50px;
+  }
+  .logo span {
+    display: inline-block;
+    font-size: 30px;
+  }
+  .hero-text h1 {
+    font-size: 40px;
+  }
+  .navbar nav ul {
+    gap: 0;
+  }
+  .navbar nav ul li a:hover {
+    background-color: #073d52;
+  }
+  .navbar nav ul li a {
+    display: inline-block;
+    width: 100%;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 0;
+    padding: 8px 16px;
+  }
+  .navbar nav {
+    position: absolute;
+    background-color: #0a4f6a;
+    width: 300px;
+    top: 70px;
+    right: 0;
+    transform: translateX(100%);
+    transition: transform 0.2s ease-in-out;
+  }
+  .navbar.active nav {
+    transform: translateX(0%);
+  }
+
+  .hamburger:hover {
+    filter: brightness(0.9);
+  }
+  .hamburger {
+    display: flex;
+    border: 1px solid white;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.3s ease;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   }
 }
